# RandomDataset

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  runtests.sh  setup.py
.github/workflows/: python-app.yml  python-publish.yml
docs/: README.md  conf.py  index.rst  modules.rst  randomdataset.fields.rst  randomdataset.generators.rst  randomdataset.rst  requirements.txt
examples/: exetera_import.ipynb  exeteraschema.json  json_dataset.ipynb  simple_dataset.ipynb  simple_linked_dataset.ipynb  user_assessments.hdf5
examples/users_assessments/: user_assessments.yaml
randomdataset/: __init__.py  __main__.py  _version.py  application.py  csvgenerator.py  dataset.py  fields.py  generator.py  schemaparser.py  utils.py
randomdataset/fields/: __init__.py  basicfields.py  fieldgen.py
randomdataset/generator/: csvgenerator.py  generator.py
randomdataset/generators/: __init__.py  csvgenerator.py  generator.py  jsongenerator.py
tests/: test_application.py  test_csvgenerator.py  test_dataset.py  test_fieldgen.py  test_jsongenerator.py  test_schema.py
tests/data/: ex2.yaml
